--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -29,7 +29,7 @@ jobs:
         with:
           dotnet-version: '6.0.x'
       - name: Install dependencies
-        run: dotnet restore
+        run: dotnet restore --verbosity Detailed
       - name: Build
         run: dotnet build
       - name: Test with the dotnet CLI
