--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -33,11 +33,11 @@ jobs:
       - name: Run check files
         run: dir
       - name: Install dependencies
-        run: dotnet restore --verbosity Detailed
+        run: dotnet restore ConsoleApp1 --verbosity Detailed
       - name: Build
-        run: dotnet build
+        run: dotnet build ConsoleApp1
       - name: Test with the dotnet CLI
-        run: dotnet test
+        run: dotnet test TestProject1
 
       # Runs a single command using the runners shell
       - name: Run a one-line script
