--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -33,18 +33,20 @@ jobs:
       - name: Run check files
         run: dir
       - name: Install dependencies
-        run: dotnet restore ConsoleApp1 --verbosity Detailed
+        run: dotnet restore ConsoleApp1
       - name: Build
         run: dotnet build ConsoleApp1
+  tests:
+     runs-on: windows-latest
+     steps:
+      - name: Checkout Repository
+        uses: actions/checkout@v3
+      
+      - name: Setup .NET
+        uses: actions/setup-dotnet@v3
+        with:
+          dotnet-version: '6.0.x'
       - name: Test with the dotnet CLI
         run: dotnet test TestProject1
 
-      # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: echo Hello, world!
-
-      # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
-        run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
+ 
