--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -36,11 +36,20 @@ jobs:
         run: dotnet restore ConsoleApp1
       - name: Build
         run: dotnet build ConsoleApp1
+      - uses: actions/upload-artifact@main
+        with:
+          name: dotnetbuild
+          path: /public
   tests:
      runs-on: windows-latest
+     needs: build
      steps:
       - name: Checkout Repository
         uses: actions/checkout@v3
+      -  uses: actions/download-artifact@main
+         with:
+          name: dotnetbuild
+          path: public
       
       - name: Setup .NET
         uses: actions/setup-dotnet@v3
