--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -36,7 +36,7 @@ jobs:
         run: dotnet restore ConsoleApp1
       - name: Build
         run: dotnet build ConsoleApp1
-      - uses: actions/upload-artifact@main 
+      - uses: actions/upload-artifact@master
         with:
            name: app build
            path: public/
@@ -46,7 +46,7 @@ jobs:
      steps:
       - name: Checkout Repository
         uses: actions/checkout@v3
-      - uses: actions/download-artifact@main 
+      - uses: actions/download-artifact@master
         with:
            name: app build
            path: public
