--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -36,20 +36,20 @@ jobs:
         run: dotnet restore ConsoleApp1
       - name: Build
         run: dotnet build ConsoleApp1
-      - uses: actions/upload-artifact@master
+      - uses: actions/upload-artifact@main
         with:
            name: app build
-           path: public/
+           path: ConsoleApp1/bin/Debug/net6.0
   tests:
      needs: build
      runs-on: windows-latest
      steps:
       - name: Checkout Repository
         uses: actions/checkout@v3
-      - uses: actions/download-artifact@master
+      - uses: actions/download-artifact@main
         with:
            name: app build
-           path: public
+           path: ConsoleApp1/bin/Debug/net6.0
       
       - name: Setup .NET
         uses: actions/setup-dotnet@v3
