--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -36,6 +36,10 @@ jobs:
         run: dotnet restore ConsoleApp1
       - name: Build
         run: dotnet build ConsoleApp1
+      - name: Upload Artifact
+        uses: actions/download-artifact@main
+        with:
+          name: app build
     
   tests:
      runs-on: windows-latest
@@ -59,7 +63,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Download Artifact
-        uses: actions/download-artifact@v2
+        uses: actions/download-artifact@main
         with:
           name: app build
 
