--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -37,7 +37,7 @@ jobs:
       - name: Build
         run: dotnet build ConsoleApp1
       - name: Upload Artifact
-        uses: actions/download-artifact@main
+        uses: actions/upload-artifact@main
         with:
           name: app build
     
