--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -40,6 +40,7 @@ jobs:
         uses: actions/upload-artifact@main
         with:
           name: app build
+          path: ConsoleApp1/bin/Debug/net6.0
     
   tests:
      runs-on: windows-latest
@@ -66,6 +67,7 @@ jobs:
         uses: actions/download-artifact@main
         with:
           name: app build
+          path: ConsoleApp1/bin/Debug/net6.0
 
       - name: List Artifact Contents
         run: |
