--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -40,7 +40,7 @@ jobs:
         uses: actions/upload-artifact@main
         with:
           name: app build
-          path: ConsoleApp1/bin/Debug/net6.0
+          path: ConsoleApp1/
     
   tests:
      runs-on: windows-latest
@@ -67,7 +67,7 @@ jobs:
         uses: actions/download-artifact@main
         with:
           name: app build
-          path: ConsoleApp1/bin/Debug/net6.0
+          path: ConsoleApp1
 
       - name: List Artifact Contents
         run: |
@@ -75,6 +75,6 @@ jobs:
 
       - name: Run Console App
         run: |
-          dotnet run --project ConsoleApp1/bin/Debug/net6.0/MyConsoleApp1.csproj
+          dotnet run --project ConsoleApp1/ConosoleApp1.csproj
 
  
