--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -75,6 +75,6 @@ jobs:
 
       - name: Run Console App
         run: |
-          dotnet run --project ConsoleApp1
+          dotnet run --project app build
 
  
